--- a/TokenAuthWebApiCore.Server/Views/Account/Login.cshtml
+++ b/TokenAuthWebApiCore.Server/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Threading.Tasks
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
-@model Angular2TokenAuthWebApiCore.Models.LoginViewModel
+@model TokenAuthWebApiCore.Server.Models.LoginViewModel
 
 @{
     ViewData["Title"] = "Log in";
