--- a/TokenAuthWebApiCore.Server/Views/Account/Register.cshtml
+++ b/TokenAuthWebApiCore.Server/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Threading.Tasks
-@using Angular2TokenAuthWebApiCore.Models
-@model Angular2TokenAuthWebApiCore.Models.RegisterViewModel
+@using TokenAuthWebApiCore.Server.Models
+@model TokenAuthWebApiCore.Server.Models.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
