--- a/TokenAuthWebApiCore.Server/Views/Shared/_Layout.cshtml
+++ b/TokenAuthWebApiCore.Server/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Angular2TokenAuthWebApiCore.Data
+﻿@using TokenAuthWebApiCore.Server.Data
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 <!DOCTYPE html>
